--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<title>hello</title>
 </head>
 <body>
-
+	<style type="text/css">
+		body{
+			background: red;
+		}
+	</style>
 </body>
+<h1>Hi, Nutella allez</h1>
 </html>
